test: adding integration test
Signed-off-by: Célio Maroja <cterceiro@bionexo.com>

--- a/config/packages/flysystem.yaml
+++ b/config/packages/flysystem.yaml
@@ -8,3 +8,7 @@ flysystem:
             adapter: 'local'
             options:
                 directory: '%kernel.project_dir%/var/storage/local/products'
+        test:
+            adapter: 'local'
+            options:
+                directory: '%kernel.project_dir%/temp/'
